code style changes and solve SonarQube issues