@@ -1,32 +1,38 @@
 package ru.zivo.beatstore.service.impl;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.webjars.NotFoundException;
+import ru.zivo.beatstore.model.filters.Filters;
+import ru.zivo.beatstore.config.properties.BeatstoreProperties;
 import ru.zivo.beatstore.model.*;
 import ru.zivo.beatstore.model.enums.BeatStatus;
+import ru.zivo.beatstore.model.enums.Genre;
 import ru.zivo.beatstore.model.enums.Licensing;
 import ru.zivo.beatstore.repository.*;
 import ru.zivo.beatstore.service.BeatService;
-import ru.zivo.beatstore.service.impl.common.DeleteAudioFiles;
-import ru.zivo.beatstore.service.impl.common.Users;
-import ru.zivo.beatstore.web.dto.BeatDto;
+import ru.zivo.beatstore.service.UserService;
+import ru.zivo.beatstore.service.impl.common.DeleteFiles;
+import ru.zivo.beatstore.web.dto.DisplayBeatDto;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class BeatServiceImpl implements BeatService {
 
-    @Value("${upload.path}")
-    private String uploadPath;
+    private static final String PREFIX_USER = "/user-";
+    private static final String PREFIX_BEAT = "/beats/beat-";
+
+    private final String uploadPath;
 
     private final BeatRepository beatRepository;
 
@@ -38,13 +44,19 @@ public class BeatServiceImpl implements BeatService {
 
     private final LicenseRepository licenseRepository;
 
+    private final UserService userService;
+
     @Autowired
-    public BeatServiceImpl(BeatRepository beatRepository, UserRepository userRepository, AudioRepository audioRepository, CartRepository cartRepository, LicenseRepository licenseRepository) {
+    public BeatServiceImpl(BeatRepository beatRepository, UserRepository userRepository,
+                           AudioRepository audioRepository, CartRepository cartRepository,
+                           LicenseRepository licenseRepository, BeatstoreProperties beatstoreProperties, UserService userService) {
         this.beatRepository = beatRepository;
         this.userRepository = userRepository;
         this.audioRepository = audioRepository;
         this.cartRepository = cartRepository;
         this.licenseRepository = licenseRepository;
+        this.uploadPath = beatstoreProperties.getUploadPath();
+        this.userService = userService;
     }
 
     @Override
@@ -54,25 +66,27 @@ public class BeatServiceImpl implements BeatService {
     }
 
     @Override
-    public BeatDto findDtoById(String userId, Long id) {
+    public DisplayBeatDto findDtoById(String userId, Long id) {
         Beat beat = findById(id);
-        BeatDto beatDto = BeatDto.builder().beat(beat).addedToCart(false).build();
-        if (userId == null) return beatDto;
+        DisplayBeatDto displayBeatDto = DisplayBeatDto.builder().beat(beat).addedToCart(false).build();
+        if (userId == null) {
+            return displayBeatDto;
+        }
 
-        User user = Users.getUser(userId);
+        User user = userService.findById(userId);
         for (Cart cart : user.getCart()) {
             if (cart.getBeat() == beat) {
-                beatDto.setAddedToCart(true);
-                beatDto.setLicensing(cart.getLicensing());
-                return beatDto;
+                displayBeatDto.setAddedToCart(true);
+                displayBeatDto.setLicensing(cart.getLicensing());
+                return displayBeatDto;
             }
         }
-        return beatDto;
+        return displayBeatDto;
     }
 
     @Override
     public Beat create(String userId, Beat beat) {
-        beat.setUser(Users.getUser(userId));
+        beat.setUser(userService.findById(userId));
 
         Beat savedBeat = beatRepository.save(beat);
 
@@ -87,12 +101,18 @@ public class BeatServiceImpl implements BeatService {
     public void update(String userId, Long beatId, Beat newBeat) {
         Beat beat = findById(beatId);
 
-        if (!beat.getUser().getId().equals(userId)) return;
+        if (!beat.getUser().getId().equals(userId)) {
+            return;
+        }
 
-        if (newBeat.getFree()) cartRepository.deleteAll(cartRepository.findAllByBeat(beat));
+        boolean free = newBeat.getFree();
+
+        if (free) {
+            cartRepository.deleteAll(cartRepository.findAllByBeat(beat));
+        }
 
         beat.setTitle(newBeat.getTitle());
-        beat.setFree(newBeat.getFree());
+        beat.setFree(free);
         beat.setGenre(newBeat.getGenre());
         beat.setMood(newBeat.getMood());
         beat.setDescription(newBeat.getDescription());
@@ -103,7 +123,7 @@ public class BeatServiceImpl implements BeatService {
 
     @Override
     public void publication(String userId, Long beatId) {
-        User user = Users.getUser(userId);
+        User user = userService.findById(userId);
         Beat beat = findById(beatId);
         if (user.getId().equals(beat.getUser().getId())) {
             beat.setStatus(BeatStatus.PUBLISHED);
@@ -114,11 +134,16 @@ public class BeatServiceImpl implements BeatService {
     @Override
     public void delete(String userId, Long beatId) {
         Beat beat = findById(beatId);
-        if (!beat.getUser().getId().equals(userId)) return;
+        if (userId == null) {
+            return;
+        }
+        if (!beat.getUser().getId().equals(userId)) {
+            return;
+        }
 
-        String pathname = uploadPath + "/user-" + beat.getUser().getId() + "/beats/beat-" + beatId;
-        DeleteAudioFiles.delete(beat, pathname);
-        System.out.println(new File(pathname).delete());
+        String pathname = uploadPath + PREFIX_USER + beat.getUser().getId() + PREFIX_BEAT + beatId;
+        DeleteFiles.delete(beat, pathname);
+        DeleteFiles.deleteFile(Path.of(pathname));
 
         beatRepository.delete(beat);
     }
@@ -126,13 +151,13 @@ public class BeatServiceImpl implements BeatService {
     @Override
     public void uploadImage(Long beatId, MultipartFile image) throws IOException {
         Beat beat = findById(beatId);
-        String pathname = uploadPath + "/user-" + beat.getUser().getId() + "/beats/beat-" + beatId;
+        String pathname = uploadPath + PREFIX_USER + beat.getUser().getId() + PREFIX_BEAT + beatId;
 
         makeDirectory(beat, pathname);
 
         String imageName = beat.getImageName();
         if (imageName != null && !imageName.equals("")) {
-            System.out.println(new File(pathname + "/" + imageName).delete());
+            DeleteFiles.deleteFile(Path.of(pathname, imageName));
         }
 
         beat.setImageName(saveFile(image, pathname, ".jpg"));
@@ -142,7 +167,7 @@ public class BeatServiceImpl implements BeatService {
     @Override
     public void uploadAudio(Long beatId, MultipartFile mp3, MultipartFile wav, MultipartFile zip) throws IOException {
         Beat beat = findById(beatId);
-        String pathname = uploadPath + "/user-" + beat.getUser().getId() + "/beats/beat-" + beatId;
+        String pathname = uploadPath + PREFIX_USER + beat.getUser().getId() + PREFIX_BEAT + beatId;
         Audio audio = beat.getAudio();
 
         makeDirectory(beat, pathname);
@@ -150,7 +175,7 @@ public class BeatServiceImpl implements BeatService {
         if (mp3 != null) {
             String name = beat.getAudio().getMp3Name();
             if (name != null && !name.equals("")) {
-                System.out.println(new File(pathname + "/" + name).delete());
+                DeleteFiles.deleteFile(Path.of(pathname, name));
             }
             audio.setMp3Name(saveFile(mp3, pathname, ".mp3"));
             audio.setMp3OriginalName(mp3.getOriginalFilename());
@@ -158,7 +183,7 @@ public class BeatServiceImpl implements BeatService {
         if (wav != null) {
             String name = beat.getAudio().getWavName();
             if (name != null && !name.equals("")) {
-                System.out.println(new File(pathname + "/" + name).delete());
+                DeleteFiles.deleteFile(Path.of(pathname, name));
             }
             audio.setWavName(saveFile(wav, pathname, ".wav"));
             audio.setWavOriginalName(wav.getOriginalFilename());
@@ -166,7 +191,7 @@ public class BeatServiceImpl implements BeatService {
         if (zip != null) {
             String name = beat.getAudio().getZipName();
             if (name != null && !name.equals("")) {
-                System.out.println(new File(pathname + "/" + name).delete());
+                DeleteFiles.deleteFile(Path.of(pathname, name));
             }
             audio.setZipName(saveFile(zip, pathname, ".zip"));
             audio.setZipOriginalName(zip.getOriginalFilename());
@@ -186,7 +211,9 @@ public class BeatServiceImpl implements BeatService {
     @Override
     public void addLicense(Long beatId, License license) {
         Beat beat = findById(beatId);
-        if (beat.getLicense() != null) license.setId(beat.getLicense().getId());
+        if (beat.getLicense() != null) {
+            license.setId(beat.getLicense().getId());
+        }
         license.setBeat(beat);
         licenseRepository.save(license);
     }
@@ -200,21 +227,21 @@ public class BeatServiceImpl implements BeatService {
 
     @Override
     public void addToFavorite(Long beatId, String userId) {
-        User user = Users.getUser(userId);
+        User user = userService.findById(userId);
         user.getFavoriteBeats().add(findById(beatId));
         userRepository.save(user);
     }
 
     @Override
     public void removeFromFavorite(Long beatId, String userId) {
-        User user = Users.getUser(userId);
+        User user = userService.findById(userId);
         user.getFavoriteBeats().remove(findById(beatId));
         userRepository.save(user);
     }
 
     @Override
     public Cart addToCart(String userId, Long beatId, String license) {
-        User user = Users.getUser(userId);
+        User user = userService.findById(userId);
         Beat beat = findById(beatId);
 
         if (cartRepository.existsByBeatAndUserAndLicensing(beat, user, Licensing.valueOf(license))) {
@@ -222,11 +249,7 @@ public class BeatServiceImpl implements BeatService {
         }
         Optional<Cart> cartRepositoryByBeatAndUser = cartRepository.findByBeatAndUser(beat, user);
         if (cartRepositoryByBeatAndUser.isEmpty()) {
-            Cart cart = Cart.builder()
-                    .user(user)
-                    .beat(beat)
-                    .licensing(Licensing.valueOf(license))
-                    .build();
+            Cart cart = new Cart(Licensing.valueOf(license), user, beat);
 
             Cart savedCart = cartRepository.save(cart);
 
@@ -252,7 +275,7 @@ public class BeatServiceImpl implements BeatService {
 
     @Override
     public void removeFromCart(String userId, Long beatId) {
-        User user = Users.getUser(userId);
+        User user = userService.findById(userId);
         Beat beat = findById(beatId);
         for (Cart cart : user.getCart()) {
             if (cart.getBeat() == beat) {
@@ -265,22 +288,22 @@ public class BeatServiceImpl implements BeatService {
 
     @Override
     public void addToHistory(String userId, Long beatId) {
-        User user = Users.getUser(userId);
+        User user = userService.findById(userId);
         Beat beat = findById(beatId);
         List<Beat> history = user.getHistory();
 
-        if (history.stream().anyMatch(b -> b == beat)) return;
+        if (history.contains(beat)) {
+            return;
+        }
 
         history.add(beat);
         userRepository.save(user);
     }
 
     @Override
-    public Page<BeatDto> getTopChart(String nameFilter, Long tag, String genre, Integer priceMin,
-                                     Integer priceMax, String key, String mood, Integer bpmMin,
-                                     Integer bpmMax, String userId, Pageable pageable
+    public Page<DisplayBeatDto> getTopChart(String nameFilter, Filters filters, String userId, Pageable pageable
     ) {
-        User user = userId != null ? Users.getUser(userId) : null;
+        User user = userId != null ? userService.findById(userId) : null;
 
         List<Beat> sortedBeats = new ArrayList<>(sortedPublishedBeats(nameFilter != null
                 ? beatRepository.findAllByTitleContainsIgnoreCase(nameFilter)
@@ -291,213 +314,202 @@ public class BeatServiceImpl implements BeatService {
 
         Collections.reverse(sortedBeats);
 
-        if (nameFilter == null && tag == null && genre == null
-            && priceMin == null && priceMax == null && key == null
-            && mood == null && bpmMin == null && bpmMax == null
-        ) return listToPage(pageable, mapToDtoList(user, sortedBeats));
+        if (nameFilter == null && filters.getTag() == null && filters.getGenre() == null
+            && filters.getPriceMin() == null && filters.getPriceMax() == null && filters.getKey() == null
+            && filters.getMood() == null && filters.getBpmMin() == null && filters.getBpmMax() == null) {
+            return listToPage(pageable, mapToDtoList(user, sortedBeats));
+        }
 
+        List<Beat> filteredBeats = filterBeatsForTopChart(sortedBeats, filters);
+
+        return listToPage(pageable, mapToDtoList(user, filteredBeats));
+    }
+
+    private static List<Beat> filterBeatsForTopChart(List<Beat> sortedBeats, Filters filters) {
         List<Beat> filteredBeats = new ArrayList<>();
 
         for (Beat sortedBeat : sortedBeats) {
-            boolean add = tag == null || sortedBeat.getTags()
-                    .stream()
-                    .anyMatch(tag1 -> Objects.equals(tag1.getId(), tag));
-
-            if (add && genre != null && !sortedBeat.getGenre().name().equals(genre)) {
-                add = false;
-            }
-
-            if (add && priceMin != null && priceMax != null) {
-                if (sortedBeat.getLicense().getPrice_mp3() < priceMin || sortedBeat.getLicense().getPrice_mp3() > priceMax) {
-                    add = false;
-                }
-                if (sortedBeat.getFree()) {
-                    add = true;
-                }
-            }
-
-            if (add && key != null && !sortedBeat.getKey().name().equals(key)) {
-                add = false;
-            }
-
-            if (add && mood != null && !sortedBeat.getMood().name().equals(mood)) {
-                add = false;
-            }
-
-            if (sortedBeat.getBpm() != null) {
-                if (add && bpmMin != null && bpmMax != null
-                    && (sortedBeat.getBpm() < bpmMin || sortedBeat.getBpm() > bpmMax)) {
-                    add = false;
-                }
-            }
+            boolean add = checkTags(filters, sortedBeat);
+            add = add && checkGenre(filters, sortedBeat);
+            add = add && checkKey(filters, sortedBeat);
+            add = add && checkMood(filters, sortedBeat);
+            add = add && checkBpm(filters, sortedBeat);
+            add = add && (checkPrice(filters, sortedBeat) || checkFree(sortedBeat));
 
             if (add) {
                 filteredBeats.add(sortedBeat);
             }
         }
+        return filteredBeats;
+    }
 
-        return listToPage(pageable, mapToDtoList(user, filteredBeats));
+    private static boolean checkFree(Beat sortedBeat) {
+        return sortedBeat.getFree();
+    }
+
+    private static boolean checkPrice(Filters filters, Beat sortedBeat) {
+        return filters.getPriceMin() != null && filters.getPriceMax() != null
+               && (sortedBeat.getLicense().getPriceMp3() < filters.getPriceMin()
+                   || sortedBeat.getLicense().getPriceMp3() > filters.getPriceMax());
+    }
+
+    private static boolean checkTags(Filters filters, Beat sortedBeat) {
+        return filters.getTag() == null || sortedBeat.getTags()
+                .stream()
+                .anyMatch(tag1 -> Objects.equals(tag1.getId(), filters.getTag()));
+    }
+
+    private static boolean checkGenre(Filters filters, Beat sortedBeat) {
+        return filters.getGenre() != null && !sortedBeat.getGenre().name().equals(filters.getGenre());
+    }
+
+    private static boolean checkKey(Filters filters, Beat sortedBeat) {
+        return filters.getKey() != null && !sortedBeat.getKey().name().equals(filters.getKey());
+    }
+
+    private static boolean checkMood(Filters filters, Beat sortedBeat) {
+        return filters.getMood() != null && !sortedBeat.getMood().name().equals(filters.getMood());
+    }
+
+    private static boolean checkBpm(Filters filters, Beat sortedBeat) {
+        return sortedBeat.getBpm() != null
+               && (filters.getBpmMin() != null && filters.getBpmMax() != null
+                   && (sortedBeat.getBpm() < filters.getBpmMin() || sortedBeat.getBpm() > filters.getBpmMax()));
     }
 
     @Override
-    public Page<BeatDto> getFavoriteBeats(String userId, Pageable pageable) {
-        User user = Users.getUser(userId);
+    public Page<DisplayBeatDto> getFavoriteBeats(String userId, Pageable pageable) {
+        User user = userService.findById(userId);
 
         return listToPage(pageable, mapToDtoList(user, sortedPublishedBeats(user.getFavoriteBeats())));
     }
 
     @Override
-    public Page<BeatDto> getHistoryBeats(String userId, Pageable pageable) {
-        User user = Users.getUser(userId);
+    public Page<DisplayBeatDto> getHistoryBeats(String userId, Pageable pageable) {
+        User user = userService.findById(userId);
 
         return listToPage(pageable, mapToDtoList(user, sortedPublishedBeats(user.getHistory())));
     }
 
     @Override
-    public Page<BeatDto> getBeats(String userId, String authUserId, Pageable pageable) {
-        User authUser = authUserId != null ? Users.getUser(authUserId) : null;
+    public Page<DisplayBeatDto> getBeats(String userId, String authUserId, Pageable pageable) {
+        User authUser = authUserId != null ? userService.findById(authUserId) : null;
 
-        return listToPage(pageable, mapToDtoList(authUser, sortedPublishedBeats(Users.getUser(userId).getBeats())));
+        return listToPage(pageable, mapToDtoList(authUser, sortedPublishedBeats(userService.findById(userId).getBeats())));
     }
 
     @Override
     public List<Beat> getDrafts(String userId) {
-        List<Beat> drafts = new ArrayList<>();
-        for (Beat beat : Users.getUser(userId).getBeats()) {
-            if (beat.getStatus() == BeatStatus.DRAFT) drafts.add(beat);
-        }
-        Collections.reverse(drafts);
-        return drafts;
+        return userService.findById(userId).getBeats()
+                .stream()
+                .filter(beat -> beat.getStatus() == BeatStatus.DRAFT)
+                .toList();
     }
 
     @Override
     public List<Beat> getSold(String userId) {
-        List<Beat> sold = new ArrayList<>();
-        for (Beat beat : Users.getUser(userId).getBeats()) {
-            if (beat.getStatus() == BeatStatus.SOLD) sold.add(beat);
-        }
-        Collections.reverse(sold);
-        return sold;
+        return userService.findById(userId).getBeats()
+                .stream()
+                .filter(beat -> beat.getStatus() == BeatStatus.SOLD)
+                .toList();
     }
 
     @Override
     public List<Beat> getSimilarBeats(Long beatId, Integer limit) {
-        Beat beatById = findById(beatId);
-        List<Beat> beats = sortedPublishedBeats(beatRepository.findAll());
-        List<Beat> similar = new ArrayList<>();
+        Genre genre = findById(beatId).getGenre();
 
-        for (Beat beat : beats) {
-            if (beat.getGenre() == beatById.getGenre()) {
-                similar.add(beat);
-            }
-        }
-
-        return similar
+        return sortedPublishedBeats(beatRepository.findAll())
                 .stream()
+                .filter(beat -> beat.getGenre() == genre)
                 .sorted((o1, o2) -> Integer.compare(o2.getPlays(), o1.getPlays()))
                 .limit(limit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public Page<BeatDto> getFreeBeats(String userId, Pageable pageable) {
-        List<Beat> beats = sortedPublishedBeats(beatRepository.findAll());
+    public Page<DisplayBeatDto> getFreeBeats(String userId, Pageable pageable) {
+        List<Beat> freeBeats = sortedPublishedBeats(beatRepository.findAll())
+                .stream()
+                .filter(Beat::getFree)
+                .toList();
 
-        List<Beat> freeBeats = new ArrayList<>();
-
-        for (Beat beat : beats) {
-            if (beat.getFree()) {
-                freeBeats.add(beat);
-            }
-        }
-
-        return listToPage(pageable, mapToDtoList(Users.getUser(userId), freeBeats));
+        return listToPage(pageable, mapToDtoList(userId != null ? userService.findById(userId) : null, freeBeats));
     }
 
     @Override
-    public Page<BeatDto> findAllByGenre(String userId, String genre, Pageable pageable) {
-        List<Beat> beats = sortedPublishedBeats(beatRepository.findAll());
+    public Page<DisplayBeatDto> findAllByGenre(String userId, String genre, Pageable pageable) {
+        List<Beat> findAllByGenre = sortedPublishedBeats(beatRepository.findAll())
+                .stream()
+                .filter(beat -> beat.getGenre().toString().equals(genre))
+                .toList();
 
-        List<Beat> findAllByGenre = new ArrayList<>();
-
-        for (Beat beat : beats) {
-            if (beat.getGenre().toString().equals(genre)) findAllByGenre.add(beat);
-        }
-
-        return listToPage(pageable, mapToDtoList(Users.getUser(userId), findAllByGenre));
+        return listToPage(pageable, mapToDtoList(userId != null ? userService.findById(userId) : null, findAllByGenre));
     }
 
     @Override
-    public Page<BeatDto> findAllByTag(String userId, Long tagId, Pageable pageable) {
-        List<Beat> beats = sortedPublishedBeats(beatRepository.findAll());
+    public Page<DisplayBeatDto> findAllByTag(String userId, Long tagId, Pageable pageable) {
+        List<Beat> findAllByTag = sortedPublishedBeats(beatRepository.findAll())
+                .stream()
+                .filter(beat -> beat.getTags().stream().anyMatch(tag1 -> Objects.equals(tag1.getId(), tagId)))
+                .toList();
 
-        List<Beat> findAllByTag = new ArrayList<>();
-
-        for (Beat beat : beats) {
-            if (beat.getTags().stream().anyMatch(tag1 -> Objects.equals(tag1.getId(), tagId))) findAllByTag.add(beat);
-        }
-
-        return listToPage(pageable, mapToDtoList(Users.getUser(userId), findAllByTag));
+        return listToPage(pageable, mapToDtoList(userId != null ? userService.findById(userId) : null, findAllByTag));
     }
 
     private void makeDirectory(Beat beat, String pathname) {
         List<File> files = List.of(
                 new File(uploadPath),
-                new File(uploadPath + "/user-" + beat.getUser().getId()),
-                new File(uploadPath + "/user-" + beat.getUser().getId() + "/beats"),
+                new File(uploadPath + PREFIX_USER + beat.getUser().getId()),
+                new File(uploadPath + PREFIX_USER + beat.getUser().getId() + "/beats"),
                 new File(pathname)
         );
 
         for (File file : files) {
-            if (!file.exists()) {
-                boolean mkdir = file.mkdir();
-                System.out.println(mkdir);
+            if (!file.exists() && !file.mkdir()) {
+                log.info("Не удалось создать файл: {}", file.getName());
             }
         }
     }
 
     private String saveFile(MultipartFile file, String pathname, String type) throws IOException {
-        if (file == null) return null;
+        if (file == null) {
+            return null;
+        }
 
         String resultFilename = UUID.randomUUID() + type;
-        file.transferTo(new File(pathname + "/" + resultFilename));
+        file.transferTo(new File("%s/%s".formatted(pathname, resultFilename)));
         return resultFilename;
     }
 
     private List<Beat> sortedPublishedBeats(List<Beat> beats) {
-        List<Beat> publishedBeats = new ArrayList<>();
-
-        for (Beat beat : beats) {
-            if (beat.getStatus() == BeatStatus.PUBLISHED) publishedBeats.add(beat);
-        }
-
-        return publishedBeats;
+        return beats.stream()
+                .filter(beat -> beat.getStatus() == BeatStatus.PUBLISHED)
+                .toList();
     }
 
-    private PageImpl<BeatDto> listToPage(Pageable pageable, List<BeatDto> beatDtoList) {
+    private PageImpl<DisplayBeatDto> listToPage(Pageable pageable, List<DisplayBeatDto> displayBeatDtoList) {
         final int start = (int) pageable.getOffset();
-        final int end = Math.min((start + pageable.getPageSize()), beatDtoList.size());
-        return new PageImpl<>(beatDtoList.subList(start, end), pageable, beatDtoList.size());
+        final int end = Math.min((start + pageable.getPageSize()), displayBeatDtoList.size());
+        return new PageImpl<>(displayBeatDtoList.subList(start, end), pageable, displayBeatDtoList.size());
     }
 
-    private List<BeatDto> mapToDtoList(User user, List<Beat> sortedBeats) {
-        List<BeatDto> beatDtoList = new ArrayList<>();
+    private List<DisplayBeatDto> mapToDtoList(User user, List<Beat> sortedBeats) {
+        List<DisplayBeatDto> displayBeatDtoList = new ArrayList<>();
 
         for (Beat sortedBeat : sortedBeats) {
-            BeatDto beatDto = BeatDto.builder()
+            DisplayBeatDto displayBeatDto = DisplayBeatDto.builder()
                     .beat(sortedBeat)
                     .addedToCart(false)
                     .build();
 
-            if (user != null) {
-                if (user.getCart().stream()
-                        .anyMatch(c -> c.getBeat() == sortedBeat)) beatDto.setAddedToCart(true);
+            if (user != null && user.getCart().stream().anyMatch(c -> c.getBeat() == sortedBeat)) {
+                displayBeatDto.setAddedToCart(true);
             }
 
-            beatDtoList.add(beatDto);
+            displayBeatDtoList.add(displayBeatDto);
         }
 
-        Collections.reverse(beatDtoList);
-        return beatDtoList;
+        Collections.reverse(displayBeatDtoList);
+        return displayBeatDtoList;
     }
 }
